group api - groupService soft Delete 작성
주요 변경사항은 다음과 같습니다.
1. docker container 실행방법 변경 - readme.md 참조
2. group soft delete 작성 및 테스트코드
3. CustomExcpetion을 위한 ErrorEnum 추가

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -18,3 +18,8 @@ spring:
 #  org.hibernate.SQL: debug
 server:
   port: 9000
+
+# swagger를 off하기 위한 yml property값입니다.
+springdoc:
+  api-docs:
+    enabled: false
