--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,8 @@
-## 작성예정입니다.
-
 version: '3.9'
 services:
   group:
+    image: group
     container_name: group
-    build: ./
     ports:
       - "9000:9000"
     restart: always
