Employee서비스의 joinEmployee 추가
변경사항은 다음과 같습니다.

1. docker-compose에서 디비를 연동하도록 설정
2. 1을 위한 application.yml property 값 추가
3. employeeService의 joinEmployee 메서드 추가 및 테스트코드작성
4. Readme.md 수정

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,25 @@
 version: '3.9'
 services:
+  db:
+    image: mysql:8.0.29
+    container_name: group_mysql
+    restart: always
+    ports:
+      - "3306:3306"
+    platform: linux/x86_64
+    environment:
+      MYSQL_DATABASE: group
+      MYSQL_ROOT_PASSWORD: rkskekfk1234
+
   group:
-    image: group
+    build:
+      context: .
     container_name: group
     ports:
       - "9000:9000"
     restart: always
+    environment:
+      MYSQL_URL: jdbc:mysql://db/group
+    depends_on:
+      - db
+
