feature, refactoring 등등
주요 변경사항은 다음과 같습니다.
1. group -> organization 명명 변경
2. spring flyway 적용
3. docker compose healthCheck적용
4. 그룹 + 그룹에속한 인원들을 가져오는 쿼리 메서드 작성

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,24 +2,28 @@ version: '3.9'
 services:
   db:
     image: mysql:8.0.29
-    container_name: group_mysql
+    container_name: organization_mysql
     restart: always
     ports:
       - "3306:3306"
     platform: linux/x86_64
     environment:
-      MYSQL_DATABASE: group
+      MYSQL_DATABASE: organization
       MYSQL_ROOT_PASSWORD: rkskekfk1234
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
 
-  group:
+  organization:
     build:
       context: .
-    container_name: group
+    container_name: organization
     ports:
       - "9000:9000"
     restart: always
     environment:
-      MYSQL_URL: jdbc:mysql://db/group
+      MYSQL_URL: jdbc:mysql://db/organization
     depends_on:
-      - db
-
+      db:
+        condition: service_healthy
