--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,16 +6,18 @@ spring:
   #    driver-class-name: org.h2.Driver
   #
   jpa:
-    #    hibernate:
-    #      ddl-auto: create
+    hibernate:
+      ddl-auto: create
     properties:
       hibernate:
         #        show_sql: true
         format_sql: true
         default_batch_fetch_size: 100
+  flyway:
+    enabled: false
 
-#logging.level:
-#  org.hibernate.SQL: debug
+logging.level:
+  org.hibernate.SQL: debug
 server:
   port: 9000
 
@@ -23,3 +25,4 @@ server:
 springdoc:
   api-docs:
     enabled: false
+
